--- a/gradleproject1/app/src/main/resources/WeatherApplication.fxml
+++ b/gradleproject1/app/src/main/resources/WeatherApplication.fxml
@@ -43,7 +43,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gradleproject1.WeatherApplicationController">
+<VBox prefHeight="600.0" prefWidth="1100.0" scaleShape="false" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gradleproject1.WeatherApplicationController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
@@ -437,7 +437,7 @@
             </AnchorPane>
             <AnchorPane layoutX="901.0" prefHeight="600.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <TextField fx:id="cityInput" layoutX="2.0" layoutY="5.0" prefHeight="36.0" prefWidth="85.0" promptText="name/zipccode" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                  <TextField fx:id="cityInput" layoutX="2.0" layoutY="5.0" prefHeight="36.0" prefWidth="85.0" promptText="city name/zip code" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                      <font>
                         <Font name="Avenir Light" size="16.0" />
                      </font>
@@ -447,7 +447,7 @@
                         <Font name="Avenir Light" size="11.0" />
                      </font>
                   </Button>
-                  <ListView fx:id="savedList" layoutY="50.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="75.0" />
+                  <ListView fx:id="savedList" fixedCellSize="50.0" layoutY="50.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="75.0" />
                   <Button fx:id="saveButton" layoutX="18.0" layoutY="377.0" mnemonicParsing="false" onAction="#handleSave" prefHeight="25.0" prefWidth="86.0" text="Save" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <font>
                         <Font name="Avenir Light" size="11.0" />
